# alec

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.md  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
demo/: CMakeLists.txt  demo.cpp  demo_runtime.cpp
example/: CMakeLists.txt  alec_compile.cpp  alec_runtime.cpp
include/alec/: alec.hpp  terminal.hpp
source/: alec.rules.hpp  driver.hpp  generator.c  generator.cpp  generator.h  lexer.l  location.hpp  parser.y
src/: CMakeLists.txt  alec.hpp  alec.rules.hpp  generator.c  generator.h  lexer.l  parser.y  rules
